WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124040
[Win] JavaScript crash in getHostCallReturnValue.
https://bugs.webkit.org/show_bug.cgi?id=124040
Summary
[Win] JavaScript crash in getHostCallReturnValue.
peavo
Reported
2013-11-08 05:38:27 PST
I'm currently getting a crash in getHostCallReturnValue in jit/JITOperations.cpp. The assembly code for the gcc x86 version has changed, and the MSVC version needs to be updated accordingly.
Attachments
Patch
(1.41 KB, patch)
2013-11-08 05:44 PST
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-11-08 05:44:52 PST
Created
attachment 216379
[details]
Patch
Geoffrey Garen
Comment 2
2013-11-08 08:45:51 PST
Comment on
attachment 216379
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-11-08 09:10:27 PST
Comment on
attachment 216379
[details]
Patch Clearing flags on attachment: 216379 Committed
r158922
: <
http://trac.webkit.org/changeset/158922
>
WebKit Commit Bot
Comment 4
2013-11-08 09:10:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug