[Win] JavaScript crash in getHostCallReturnValue. https://bugs.webkit.org/show_bug.cgi?id=124040

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-11-08
Reviewed by Geoffrey Garen.

* jit/JITOperations.cpp: Update MSVC assembler code in getHostCallReturnValue according to gcc x86 version.

Canonical link: https://commits.webkit.org/142229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158922 268f45cc-cd09-0410-ab3c-d52691b4dbfc